--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,8 +16,9 @@ retrofit = "2.9.0"
 coroutines = "1.7.3"
 lifecycle = "2.2.0"
 navigation = "2.7.4"
-preference = "1.2.1"
 okhttp = "4.11.0"
+datastorePrefences = "1.0.0-alpha01"
+lifecycleKtx = "2.8.6"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -38,8 +39,10 @@ gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref 
 lifecycle = { group = "androidx.lifecycle", name = "lifecycle-extensions", version.ref = "lifecycle" }
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation" }
-preference = { group = "androidx.preference", name = "preference-ktx", version.ref = "preference" }
 okhttp-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
+datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastorePrefences" }
+lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleKtx" }
+lifecycle-livedata = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycleKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
