--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,8 @@ navigation = "2.7.4"
 okhttp = "4.11.0"
 datastorePrefences = "1.0.0-alpha01"
 lifecycleKtx = "2.8.6"
+recyclerview = "1.3.2"
+safe-args = "2.7.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -43,9 +45,10 @@ okhttp-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-i
 datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastorePrefences" }
 lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleKtx" }
 lifecycle-livedata = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycleKtx" }
+recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsGoogleServices" }
-
+navigation-safeargs = { id = "androidx.navigation.safeargs.kotlin", version.ref = "safe-args" }
