--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,7 +22,8 @@ lifecycleKtx = "2.8.6"
 recyclerview = "1.3.2"
 safe-args = "2.7.7"
 swipeRefresh = "1.1.0"
-sweet-alert = "1.6.2"
+sweetAlert = "1.6.2"
+itextPdf = "5.5.13.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -49,7 +50,8 @@ lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-kt
 lifecycle-livedata = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycleKtx" }
 recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 swipe-refresh-layout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version.ref = "swipeRefresh" }
-sweet-alert = { group = "com.github.f0ris.sweetalert", name = "library", version.ref = "sweet-alert" }
+sweet-alert = { group = "com.github.f0ris.sweetalert", name = "library", version.ref = "sweetAlert" }
+itext-pdf = { group = "com.itextpdf", name = "itextpdf", version.ref="itextPdf" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
